# CodeReviewAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py  routes.py  utils.py
app/services/: ai_service.py  github_service.py
tests/: test_routes.py  test_services.py
